# aiogram3-template-bot

./: .env.template  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.bat
src/: .env.template  bot.py  main.py  run.py
src/app/db/: __init__.py  helper.py  models.py
src/app/handlers/: __init__.py  main_handler.py
src/bot/: __init__.py  start.py  start_bot.py
src/bot/common/: __init__.py  loader.py
src/bot/handlers/: __init__.py  handler.py
src/bot/keyboards/inline/: kb.py
src/bot/middlewares/: __init__.py  chat_type.py
src/bot/states/: bot_state.py
src/core/: config.py  load.py
src/core/db/: __init__.py  helper.py
src/core/db/models/: user.py
src/db/: __init__.py  helper.py
src/db/crud/: __init__.py  base.py  subscription.py  user.py
src/db/models/: __init__.py  base.py  subscription.py  user.py
src/db/models/mixins/: __init__.py  int_id_mixin.py
src/db/repositories/: __init__.py  _base.py  user.py
src/db/schemas/: __init__.py  subscription.py  user.py
src/handlers/: __init__.py  main_handler.py
src/handlers/personal/: __init__.py  handler.py
src/handlers/personal_chat/: __init__.py  handler.py
src/handlers/public_chat/: handler.py
src/keyboards/inline/: __init__.py  kb.py
src/middlewares/: __init__.py  chat_type.py  subscription.py
src/states/: __init__.py  bot_state.py
src/utils/: __init__.py  load.py  request.py  requests.json  sub_check.py
